[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_desc}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license = "MIT"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: {{cookiecutter.python_version}}",
]
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Documentation = "https://github.com/{{cookiecutter.__gh_slug}}#readme"
Issues = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
Source = "https://github.com/{{cookiecutter.__gh_slug}}"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.package_name}}"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--cov={{cookiecutter.project_slug}}",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=lcov",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source_pkgs = ["{{cookiecutter.package_name}}"]
branch = true
parallel = true
omit = [
    "*/.venv/*",
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
{{cookiecutter.package_name}} = ["src/{{cookiecutter.package_name}}", "*/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}"]
tests = ["tests", "*/{{cookiecutter.project_slug}}/tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if self.debug:",
    "if TYPE_CHECKING:",
    "no cov",
    "raise NotImplementedError",
    "pass",
    "pragma: no cover",
]
show_missing = true  # Show missing lines in the report
precision = 2  # Number of decimal places to use when rounding

# [tool.uv.pip]
# index-url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
