[package]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
edition = "2021"
description = "{{cookiecutter.project_desc}}"
repository = "https://github.com/{{cookiecutter.__gh_slug}}"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
husky-rs = "0.1.0"
